[gd_scene load_steps=2 format=3 uid="uid://c2cobqek6i253"]

[ext_resource type="Script" uid="uid://dyag1ohjdy4hi" path="res://battle/ship/abilities/ship_ability.gd" id="1_2vlv2"]

[node name="ShipAbility" type="Node2D"]
script = ExtResource("1_2vlv2")

[node name="CooldownTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="CooldownTimer" to="." method="_on_cooldown_timer_timeout"]
